<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <com.dz.strapdf.ui.PageEditView
        android:id="@+id/editView"
        android:layout_width="match_parent" android:layout_height="0dp"
        android:layout_weight="1" android:background="#333333" />

    <HorizontalScrollView
        android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:orientation="horizontal" android:padding="6dp">

            <Button android:id="@+id/btnPrev" style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/prev" />
            <TextView android:id="@+id/txtPage"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center" android:text="1/1" />
            <Button android:id="@+id/btnNext" style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/next" />

            <Button android:id="@+id/btnText" style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginStart="6dp" android:text="@string/mode_text" />
            <Button android:id="@+id/btnHl" style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginStart="6dp" android:text="@string/mode_hl" />
            <Button android:id="@+id/btnInk" style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginStart="6dp" android:text="@string/mode_ink" />
            <Button android:id="@+id/btnUndo" style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginStart="6dp" android:text="@string/undo" />
            <Button android:id="@+id/btnSave"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginStart="6dp" android:text="@string/save" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
